AWS-serverless deployment: Initial workflow adaptations  (#12)
* Lambda env vars to control flow

UNTESTED IN LAMBDA; seems to work ok locally

* Gitignore for lambda deps directory

* Adapt run.py for lambda and create initial lambda deployment package

* Lambda can override LAMBDA_PHASE with input JSON

* Driver script lambda adaptation

* Init lambda script & package

* lambda packages & pipeline fail eval

* Lambda updates

- Logging now works
- init purges rt files in addition to stage dir
- Formatting of fail_eval output

* Lambda post-fail cleanup & logging

* Renamed deploy tool directory

* Add AWS Section to main readme

* Stub files for AWS deploy docs

* Verify granule download step got everything

* Start of AWS docs

* Local FS to S3 sync script

Writing direct to S3 is slow and spikes in memory usage to the point it becomes problematic for running in Fargate jobs on an AWS deployment. This script enables a final S3 destination with the result being written to local FS.
Also has the benefit of separating the write location from the prod location. In the event of a critical failure, the potentially corrupted data will not be exposed.

* Some initial terraform work

Still a WIP & pending testing

* Initial tf definition

Still needs testing

* Fixed some mistakes

Still needs testing

* Add policy to SNS topic

* More configuration options

* TF gitignore

* TF improvements/fixes

- Variables for setting oco image to deploy
- Variable for creating the schedule in a disabled state
- Fix find/replace error in search Batch job def environment
- Add chunk config to tags
- Fixed secret being unable to be recreated immediately after being destroyed
- Destroy log group on tf destroy
- Propagate Batch job tags
- Misc other changes

* Added docs images

* Minor tf updates

* TF deploy readme step 1

* TF deploy readme step 2

* TF deploy readme final steps

* Tweak figure

* Removed t

--- a/.gitignore
+++ b/.gitignore
@@ -146,5 +146,9 @@ test_data/
 /demo_repeat_slice_pre_qf/
 /s3_src_demo_post_qf/
 /s3_src_demo_pre_qf/
-/tools/stac/dc-002-download.filled.yaml
+/tools/deploy/dc-002-download.filled.yaml
 /notebooks/zarr_demo/
+
+/tools/deploy/package/
+/tools/deploy/terraform/.terraform.lock.hcl
+/tools/deploy/terraform/.terraform/
