OCO-2 Data support (#22)
* Moved code to processor module

* OCO-2 Processor & support

* Handle S3 files w/ oco3/oco2 spec

* Fix dt guess

* Update top level readme

* Run script update

* Run script update to handle mismatches in dataset availability

* Terraform update for OCO2 data

* Gap file tweaks

* Update tf image min tag version doc

--- a/tools/deploy/dc-001-search-cmr-oco3.yaml
+++ b/tools/deploy/dc-001-search-cmr-oco3.yaml
@@ -14,7 +14,28 @@
 
 version: "3.7"
 services:
-  cumulus_granules_search:
+  cumulus_granules_search_oco2:
+    image: ghcr.io/unity-sds/unity-data-services:5.3.2
+    volumes:
+      - /tmp:/tmp
+    command: ["SEARCH"]
+    environment:
+
+      COLLECTION_ID: 'C2716248872-GES_DISC'
+      LIMITS: '-1'
+      DATE_FROM: '1970-01-01T00:00:00Z'
+#      DATE_FROM: '2022-01-01T00:00:00Z'
+      DATE_TO: '2999-12-31T00:00:00Z'
+      VERIFY_SSL: 'FALSE'
+      FILTER_ONLY_ASSETS: 'TRUE'
+
+      GRANULES_SEARCH_DOMAIN: 'CMR'
+      CMR_BASE_URL: 'https://cmr.earthdata.nasa.gov'
+      LOG_LEVEL: '10'
+      OUTPUT_FILE: /tmp/cmr-results-oco2.json
+    networks:
+      - internal
+  cumulus_granules_search_oco3:
     image: ghcr.io/unity-sds/unity-data-services:5.3.2
     volumes:
       - /tmp:/tmp
@@ -24,6 +45,7 @@ services:
       COLLECTION_ID: 'C2237732007-GES_DISC'
       LIMITS: '-1'
       DATE_FROM: '1970-01-01T00:00:00Z'
+#      DATE_FROM: '2022-01-01T00:00:00Z'
       DATE_TO: '2999-12-31T00:00:00Z'
       VERIFY_SSL: 'FALSE'
       FILTER_ONLY_ASSETS: 'TRUE'
