--- a/tools/deploy/oco-23-known-gaps.json
+++ b/tools/deploy/oco-23-known-gaps.json
@@ -3,6 +3,10 @@
     "oco3": {
       "start": "2023-11-13",
       "stop": "2024-07-16"
+    },
+    "oco3_sif": {
+      "start": "2023-11-13",
+      "stop": "2024-07-16"
     }
   }
 ]
